--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://tchin8.github.io/Color-Picker",
+  "homepage": "http://tchin8.github.io/Color-Finder",
   "name": "front-end-applicant-project",
   "version": "0.1.0",
   "private": true,
